--- a/index.html
+++ b/index.html
@@ -9,12 +9,36 @@
   <body>
     <form id="form" action="" enctype="multipart/form-data">
       <input name="file" type="file" multiple />
+      <!-- <input name="name" type="text" /> -->
       <button type="submit">Upload</button>
     </form>
     <div id="imagesContainer"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.js"></script>
+    <script>
+      const form = document.getElementById('form')
+      form.addEventListener('submit', function (e) {
+        e.preventDefault()
+        console.dir(e.target)
 
+        const data = new FormData()
+        data.append('file', this.elements.file.files[0])
+        data.append('nickname', this.elements.file.files[0].name)
+
+        axios
+          .post('http://localhost:8080/api/superheros/', data, {
+            headers: {
+              'content-type': 'multipart/form-data', // do not forget this
+            },
+          })
+          .then((response) => {
+            console.log(response)
+          })
+          .catch((error) => {
+            console.log(error.message)
+          })
+      })
+    </script>
     <script>
       const imgContainer = document.getElementById('imagesContainer')
       const imagesRequest = axios.get('http://localhost:8080/api/superheros/')
@@ -25,23 +49,13 @@
             .map(
               (item) => `<div>
         <h2>${item.nickname}</h2>
-        <img src="http://localhost:8080/${item.imageUrl}" width=220>
+        <img src="http://localhost:8080/${item.imageUrl}" width=180>
         </div>`
             )
             .join()
           imgContainer.insertAdjacentHTML('beforeEnd', imgElements)
         })
         .catch((error) => console.log(error.message))
-    </script>
-
-    <script>
-      const form = document.getElementById('form')
-      form.addEventListener('submit', function (e) {
-        e.preventDefault()
-        const data = new FormData()
-        data.append('file', this.elements.file.files[0])
-        console.log(data)
-      })
     </script>
   </body>
 </html>
